# rss-reader

./: CMakeLists.txt  Menu.cpp  Menu.h  NewsItem.cpp  NewsItem.h  README.md  UserRequest.cpp  UserRequest.h  main.cpp
pugi/: pugiconfig.hpp
